tests/paczka1/fuzzy1/87106811.err
Error in line 1: BxlmzFq7 S397 48,2
Error in line 2: BxlmzFq7 A977 76,2
Error in line 16: dyL6uHheOc A977 24,6
Error in line 21: dyL6uHheOc A511 51,7
Error in line 24: 4CnzTiPq S810 19,3
Error in line 31: dyL6uHheOc A511 5,83
